crates/air_r_parser/tests/snapshots/error/namespace_expression/call_lhs_double_colon.R.snap
---
source: crates/air_r_parser/tests/spec_test.rs
expression: snapshot
---
## Input

```R
a()::b
```


## AST

```
RRoot {
    bom_token: missing (optional),
    expressions: RExpressionList [
        RBogusExpression {
            items: [
                R_BOGUS@0..6 "a()::b" [] [],
            ],
        },
    ],
    eof_token: EOF@6..6 "" [] [],
}
```

## CST

```
0: R_ROOT@0..6
  0: (empty)
  1: R_EXPRESSION_LIST@0..6
    0: R_BOGUS_EXPRESSION@0..6
      0: R_BOGUS@0..6 "a()::b" [] []
  2: EOF@6..6 "" [] []

```

## Diagnostics

```
call_lhs_double_colon.R parse ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Failed to parse due to syntax errors.
  
```
