crates/air_r_parser/tests/snapshots/error/namespace_expression/call_lhs_triple_colon.R.snap
---
source: crates/air_r_parser/tests/spec_test.rs
expression: snapshot
---
## Input

```R
a():::b
```


## AST

```
RRoot {
    bom_token: missing (optional),
    expressions: RExpressionList [
        RBogusExpression {
            items: [
                R_BOGUS@0..7 "a():::b" [] [],
            ],
        },
    ],
    eof_token: EOF@7..7 "" [] [],
}
```

## CST

```
0: R_ROOT@0..7
  0: (empty)
  1: R_EXPRESSION_LIST@0..7
    0: R_BOGUS_EXPRESSION@0..7
      0: R_BOGUS@0..7 "a():::b" [] []
  2: EOF@7..7 "" [] []

```

## Diagnostics

```
call_lhs_triple_colon.R parse ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Failed to parse due to syntax errors.
  
```
