crates/air_r_parser/tests/snapshots/error/namespace_expression/chained_triple_colon.R.snap
---
source: crates/air_r_parser/tests/spec_test.rs
expression: snapshot
---
## Input

```R
a:::b:::c
```


## AST

```
RRoot {
    bom_token: missing (optional),
    expressions: RExpressionList [
        RBogusExpression {
            items: [
                R_BOGUS@0..9 "a:::b:::c" [] [],
            ],
        },
    ],
    eof_token: EOF@9..9 "" [] [],
}
```

## CST

```
0: R_ROOT@0..9
  0: (empty)
  1: R_EXPRESSION_LIST@0..9
    0: R_BOGUS_EXPRESSION@0..9
      0: R_BOGUS@0..9 "a:::b:::c" [] []
  2: EOF@9..9 "" [] []

```

## Diagnostics

```
chained_triple_colon.R parse ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Failed to parse due to syntax errors.
  
```
